--- a/_config.yml
+++ b/_config.yml
@@ -25,3 +25,15 @@ kramdown:
   # Disable auto-generated ID's for headings
   auto_ids: false
 
+defaults:
+  -
+    scope:
+      path: ""
+      type: "posts"
+    values:
+      layout: "post"
+      permalink: /:categories/:slug/
+
+category_name_map:
+  student: "학생"
+  teacher: "선생님"
