--- a/_config.yml
+++ b/_config.yml
@@ -25,6 +25,14 @@ kramdown:
   # Disable auto-generated ID's for headings
   auto_ids: false
 
+exclude:
+  - Gemfile
+  - Gemfile.lock
+  - bower.json
+  - Gruntfile.json
+  - package.json
+  - node_modules
+
 defaults:
   -
     scope:
