add lunr.js to make search index / rename grunt commands as camel-case

--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
         "grunt-git": "~0.3.7",
         "github": "~0.2.4",
         "q": "~1.4.1",
-        "dateformat": "~1.0.12"
+        "dateformat": "~1.0.12",
+        "lunr": "~0.6.0"
     }
 }
