--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
         "github": "~0.2.4",
         "q": "~1.4.1",
         "dateformat": "~1.0.12",
-        "lunr": "~0.6.0"
+        "lunr": "~0.6.0",
+        "yamljs": "~0.2.4"
     }
 }
