--- a/_config.yml
+++ b/_config.yml
@@ -9,9 +9,9 @@
 title: EDUCAST Help Center
 email: support@tntcrowd.com
 description: > # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
+  에듀캐스트의 FAQ를 모아둔 Help Center입니다.
+  궁금한 사항 중 Help Center에 없거나 설명이 부족하다고 생각하시면 문의해주시기 바랍니다.
+  최대한 빠른 시일 내에 반영하도록 하겠습니다.
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "https://help.educast.pro" # the base hostname & protocol for your site
 facebook_username: educast.pro
