--- a/_config.yml
+++ b/_config.yml
@@ -8,8 +8,8 @@
 # Site settings
 title: EDUCAST Help Center
 email: support@tntcrowd.com
-description: > # this means to ignore newlines until "baseurl:"
-  에듀캐스트의 FAQ를 모아둔 Help Center입니다.
+description: #> # this means to ignore newlines until "baseurl:"
+  이곳은 에듀캐스트의 Help Center입니다.
   궁금한 사항 중 Help Center에 없거나 설명이 부족하다고 생각하시면 문의해주시기 바랍니다.
   최대한 빠른 시일 내에 반영하도록 하겠습니다.
 baseurl: "" # the subpath of your site, e.g. /blog
