Close educast-issues#504

--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@
 
 # Site settings
 title: EDUCAST Help Center
-email: support@tntcrowd.com
+email: educast@tntcrowd.com
 description: #> # this means to ignore newlines until "baseurl:"
   이곳은 에듀캐스트의 Help Center입니다.
   궁금한 사항 중 Help Center에 없거나 설명이 부족하다고 생각하시면 문의해주시기 바랍니다.
