--- a/help/student/faq.yml
+++ b/help/student/faq.yml
@@ -1,6 +1,6 @@
 -
-  post: "02_payment_강좌-결제.md"
-  header: "강의를 결제하고 싶은데 어떤 방법이 가능한가요?"
+  post: "06_play_강의-재생.md"
+  header: "강의를 다운로드할 수 있나요? (앱)"
 
 -
   post: "03_policy_정책-안내.md"
