Update Help Center Pages

--- a/_data/faq.yml
+++ b/_data/faq.yml
@@ -1,5 +1,5 @@
 student:
-    - {post: 2017-04-28-payment.md, header: '강의를 결제하고 싶은데 어떤 방법이 가능한가요?'}
+    - {post: 2017-04-28-play.md, header: '강의를 다운로드할 수 있나요? (앱)'}
     - {post: 2017-06-14-policy.md, header: 'EPIC 정책이 무엇인가요?'}
     - {post: 2017-04-28-play.md, header: '강의를 배속으로 재생할 수 있나요?'}
 teacher:
