--- a/bower.json
+++ b/bower.json
@@ -1,6 +1,6 @@
 {
   "name": "educast-help",
-  "homepage": "https://help.educast.pro",
+  "homepage": "https://help.educast.com",
   "authors": [
     "TNTcrowd <devmaster@tntcrowd.com>"
   ],
